# tess

./: .clang-tidy  .clang-tidy-advisory  .clangd  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: advisory.yml  ci.yml  pages.yml
bench/: CMakeLists.txt  tess_bench.cc  tess_bench.cpp  tess_diagnostics_alloc_hooks.cc  tess_diagnostics_bench.cc  tess_ecs_bench.cc  tess_fields_bench.cc  tess_flecs_ecs_bench.cc  tess_maintenance_bench.cc  tess_parallel_bench.cc  tess_path_agent_bench.cc  tess_path_product_bench.cc  tess_path_scan_bench.cc  tess_path_weighted_bench.cc  tess_persistence_bench.cc  tess_pipeline_query_bench.cc  tess_render_delta_bench.cc  tess_residency_bench.cc  tess_scheduler_bench.cc  tess_spatial_bench.cc  tess_topology_bench.cc  tess_transition_bench.cc
bench/thresholds/: block.json  diagnostics.json  ecs.json  fields.json  key-conversions.json  parallel.json  path.json  queued.json  render-delta.json  residency.json  scheduler.json  storage.json  topology.json
cmake/: TessCMakeCompatibility.cmake  TessEnttDeps.cmake  TessFlecsDeps.cmake  TessGitDependency.cmake  TessGitPopulate.cmake  TessGoogleDeps.cmake  TessProjectOptions.cmake  check-public-headers.cmake  tess-config.cmake.in  tess-version.cmake
docs/: CNAME  README.md  api-main.md  dependencies.md  examples.md  for-agents.md  getting-started.md  git-hooks.md  history.md  hosting.md  index.md  llms.txt  packaging.md  performance.md  roadmap.md  style.md  support.md  use-cases.md
docs/architecture/: README.md  block.md  diagnostics.md  ecs.md  gpu.md  maintenance.md  path.md  persistence.md  query.md  queued-operations.md  shape.md  simulation.md  spatial-coordination.md  storage.md  surface.json  topology.md
docs/assets/fonts/: README.md
docs/decisions/: CHANGELOG-archive-2026-06.md  CHANGELOG-archive-2026-07-09-10.md  CHANGELOG-archive.md  CHANGELOG.md
docs/doxygen-awesome/: README.md  tess-theme.css
docs/guide/: README.md  diagnostics.md  entities.md  pathfinding.md  presentation.md  residency.md  topology.md  writes.md
docs/planning/: README.md  audit-2026-07-09-remediation.md  audit-2026-07-09.md  audit-2026-07-11-remediation.md  audit-2026-07-11.md  benchmark-calibration.md  benchmark-plan.md  concurrency-plan.md  initial-milestone-plan.md  optimization-log.md  roadmap-completion.md  test-and-benchmark-redesign.md  v1-milestone-plan.md
docs/stylesheets/: extra.css
docs/tdd/: README.md  block-kernel-pipeline.md  core-chunk-storage.md  core-shape-coordinate-key-system.md  diagnostics-and-tooling.md  ecs-integration.md  flow-distance-fields.md  gpu-backend-interface.md  grid-benchmark-data-and-scenario-oracle.md  lattice-and-transition-model.md  modern-cpp-compile-time-safety.md  pathfinding-core.md  project-design.md  queued-operations-and-planner.md  render-delta-presentation-bridge.md  simulation-scheduler.md  tdd_addendum_concurrent_tile_world.md  tdd_addendum_tile_layout_bench_takeaways.md  tdd_addendum_work_contracts.md  topology-and-region-graph.md
examples/: CMakeLists.txt  ant_farm_vertical.cc  colony_2d.cc  custom_ecs_min.cc  documentation.cc  entt_pawns.cc  flecs_pawns.cc  mvp_path.cc  path_agents.cc  quickstart.cc  render_delta_consumer.cc  sparse_stream.cc  stairs_3d.cc
examples/web_colony/: colony.cc
examples/web_colony/site/: app.js  index.html  style.css
examples/web_pathfinder/: pathfinder.cc
examples/web_pathfinder/site/: app.js  index.html  style.css
examples/webgpu_compute/: webgpu_compute.cc
examples/webgpu_compute/site/: app.js  index.html
include/tess/: pathfinding.h  simulation.h  tess.h  tess.hpp  version.h.in
include/tess/block/: block.h  pipeline.h
include/tess/core/: assert.h  lattice.h  shape.h  tag_identity.h  uint128.h
include/tess/diagnostics/: diagnostics.h  export.h  trace.h  warning_sink.h
tests/: AGENTS.md  CMakeLists.txt  allocation_counter.cc  allocation_counter.h  gpu_mock_backend.h  grid_benchmark_harness.h  path_test_util.h  render_delta_replay.h  tess_allocation_counter_test.cc  tess_area_index_test.cc  tess_assert_test.cc  tess_block_pipeline_test.cc  tess_block_test.cc  tess_diagnostics_default_test.cc  tess_diagnostics_enabled_test.cc  tess_diagnostics_panels_test.cc  tess_diagnostics_trace_test.cc  tess_ecs_adapter_test.cc  tess_ecs_entt_test.cc  tess_ecs_flecs_test.cc  tess_execution_phase_safety_test.cc  tess_gpu_interface_test.cc  tess_grid_benchmark_data_test.cc  tess_grid_benchmark_harness_test.cc  tess_imgui_tools_test.cc  tess_local_coordination_test.cc  tess_maintenance_test.cc  tess_movement_class_test.cc  tess_path_agent_test.cc  tess_path_agent_tick_test.cc  tess_path_cache_test.cc  tess_path_movement_class_test.cc  tess_path_portal_route_test.cc  tess_path_precheck_runtime_test.cc  tess_path_precheck_test.cc  tess_path_product_test.cc  tess_path_runtime_sparse_test.cc  tess_path_runtime_test.cc  tess_path_search_test.cc  tess_path_test.cc  (+40 more)
tests/fetchcontent_consumer/: CMakeLists.txt  main.cc
tests/imgui_stub/: imgui.h
tests/install_consumer/: CMakeLists.txt  main.cc
tests/webgpu_stub/webgpu/: webgpu.h
tools/: benchmark_artifact_metadata.py  benchmark_baseline_summary.py  benchmark_thresholds.py  benchmark_trends.py  build_web_demo.sh  check_doc_outputs.py  check_doc_snippets.py  check_doc_versions.py  check_docs_links.py  check_public_docs.py  check_public_surface.py  ci_changes.py  compile_docs_requirements.sh  compile_requirements.sh  fetchcontent_smoke.sh  git_hooks.py  grid_benchmark_manifest.json  header_compile_cost.py  install_smoke.sh  profile_benchmark.sh  profile_symbol_summary.py  wait_for_browser_state.py
tools/git-hooks/: commit-msg  pre-commit
tools/steamdeck/: Dockerfile  README.md  container-up.sh  deck  deck-bench.sh  deck-run-pinned.sh
(+52 files in other folders)
